# Phat_Django_Badass

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_this_shit.sh  test_fun.py  test_redis.py  testing_bruh.py
Home/: __init__.py  urls.py
Home/Views/: home.py
Home/Views/auth/: login.py  signup.py
Home/commons/: enums.py
Home/templates/: 404.html  500.html  home.html
Home/templates/registration/: login.html
Phat_Django_Badass/: asgi.py  settings.py  urls.py
api/: serializers.py  views.py
api/serializers/: expense.py  expenses.py  fitness.py  investment.py  track_investment.py
api/views/: Expense.py  Expenses.py  TrackGym.py
back_end/: Dockerfile  manage.py  run_this_shit.sh
back_end/Phat_Django_Badass/: settings.py  urls.py  wsgi.py
back_end/data_processing/: expense.py  investment.py
back_end/phat_finance/: admin.py  apps.py
back_end/phat_fitness/: admin.py
back_end/phat_investment/: admin.py  apps.py
data_processing/: data_preps.py  investment.py
forms/: forms.py
front_end/: Dockerfile  package-lock.json  package.json
phat_finance/: admin.py  apps.py  views.py
phat_finance/enums/: finance_enums.py
phat_finance/forms/: forms.py
phat_finance/migrations/: 0001_initial.py  0002_alter_debts_due_date_alter_expenses_category.py  0002_alter_expenses_cash_alter_expenses_credit_and_more.py  0003_alter_debts_due_date.py  0003_alter_expenses_user.py  0003_rename_expenses_expense_inoutflow__type_and_more.py  0004_alter_balance_expense_alter_debts_due_date_and_more.py  0004_assets_conversion_debts_emergencyfund_inoutflow_and_more.py  0004_rename__type_inoutflow_type.py  0005_assets_amount_assets_bought_price_assets_date_and_more.py  0005_remove_inoutflow_placeholder_alter_inoutflow_amount_and_more.py  0006_alter_debts_due_date.py  0006_remove_conversion_conversion_amount.py  0007_alter_assets_amount_alter_debts_due_date.py  0007_delete_balance_alter_conversion_type_conversion_and_more.py  0008_alter_debts_due_date.py  0008_rename_bought_price_assets_price_assets_transac_type_and_more.py  0009_alter_debts_due_date_alter_expenses_category_and_more.py  0009_rename_client_debts_borrower_remove_debts_total_and_more.py  0010_alter_expense_category.py  0011_creditcardpayment_alter_expense_category.py  0012_alter_creditcardpayment_term.py  0013_creditcardpayment_card.py
phat_finance/models/: __init__.py  assets.py  balances.py  conversions.py  creditcard_payment.py  debts.py  emergency_funds.py  expense.py  expenses.py  in_out_flows.py  sinking_funds.py  total_expenses.py
phat_finance/templates/: dashboard.html  expense.html
phat_finance/views/: dashboard.py  expense.py
phat_fitness/: admin.py  apps.py
phat_fitness/enums/: fitness_enums.py
phat_fitness/migrations/: 0001_initial.py  0002_gymtrack_duration.py
phat_fitness/models/: __init__.py  gym_track.py  track_gym.py
phat_investment/: admin.py  apps.py  views.py
phat_investment/enums/: investment_enums.py
phat_investment/migrations/: 0002_investment.py  0003_alter_investment_investment_type.py  0006_dividend.py  0006_dividend_new.py
phat_investment/models/: __init__.py  dividend.py  investment.py  track_investment.py
phat_investment/templates/: portfolio.html
settings/: databases.py  general.py  humanizers.py  installed_apps.py  logging.py  messages.py  middlewares.py  rest_framework.py  security.py  sessions.py  system_check.py
(+26 files in other folders)
