[project]
name = "phat-django-badass"
version = "1.0.0"
description = "This is the Django backend to handle all the stuffs in my life"
authors = [
    {name = "Phat H. Pham",email = "57822898+Phat-pham99@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "posting (>=2.7.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "ruff (>=0.11.8,<0.12.0)",
    "pyright (>=1.1.400,<2.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "drf-restwind (>=0.1.6,<0.2.0)",
    "django-cf (>=0.0.17,<0.0.18)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
django = "^5.2"
djangorestframework = "^3.16.0"
duckdb = "^1.2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
