[project]
name = "phat-django-badass"
version = "1.0.0"
description = "This is the Django backend to handle all the stuffs in my life"
authors = [
    {name = "Phat H. Pham",email = "57822898+Phat-pham99@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "ruff (>=0.11.8,<0.12.0)",
    "pyright (>=1.1.400,<2.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "drf-restwind (>=0.1.6,<0.2.0)",
    "django-cf (==0.1.1)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "wsgid (>=0.9,<0.10)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "hypercorn (>=0.17.3,<0.18.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "django-admin-logs (>=1.4.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "django-admin-interface (>=0.30.0,<0.31.0)",
    "upstash-redis (>=1.4.0,<2.0.0)",
    "django-humanize (>=0.1.2,<0.2.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "dj-logging (>=2.0.1,<3.0.0)",
    "granian (>=2.6.0,<3.0.0)",
    "django-cached-authentication-middleware (>=0.2.2,<0.3.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
django = "^5.2"
djangorestframework = "^3.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
